--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,7 @@
     <!-- App CSS -->
     <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
     <link rel="stylesheet" href="/styles/nav.css" type="text/css" />
+    <link rel="stylesheet" href="/styles/header.css" type="text/css" />
 
     <!-- External JS -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
@@ -28,16 +29,23 @@
 
   <body>
     <!-- Top nav bar (fixed) -->
+    <nav>
+      <span class="logo">tweeter</span>
+      <div class="new-tweet">
+        <span><strong>Write</strong> a new tweet.<br>
+          <i class="fa-solid fa-angles-down"></i>
+        </span>          
+      </div>        
+    </nav>    
     <header>
-      <nav>
-        <span class="logo">tweeter</span>
-        <div class="new-tweet">
-          <span><strong>Write</strong> a new tweet.<br>
-            <i class="fa-solid fa-angles-down"></i>
-          </span>          
-        </div>        
-      </nav>
-    </header>
+      <div>
+          <img src="/images/profile-hex.png"> 
+      </div>
+      <br>
+      <div>
+          <h2>Your Name</h2>
+      </div>
+  </header>
     <!-- Page-specific (main) content here -->
     <main class="container"></main>
   </body>
