--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
     <nav>
       <span class="logo">tweeter</span>
       <div class="new-tweet">
-        <span><strong>Write</strong> a new tweet.<br>
+        <span><strong>Write</strong> a new tweet.
           <i class="fa-solid fa-angles-down"></i>
         </span>          
       </div>        
