--- a/public/index.html
+++ b/public/index.html
@@ -54,7 +54,7 @@
         <div class="form-wrapper">
           <form method="POST" action="/tweets">
             <!-- <label for="tweet-text">What are you humming about?</label> -->
-            <input type="text" name="text" id="tweet-text" placeholder="What are you humming about?" data-maxlength="140"></input>
+            <textarea type="text" rows="3" name="text" id="tweet-text" placeholder="What are you humming about?" data-maxlength="140"></textarea>
             <div class="tweet-text-info">
               <button id="tweet-send" type="submit">Tweet</button>
               <output id="tweet-counter" name="counter" class="counter" for="tweet-text">140</output>
