--- a/public/index.html
+++ b/public/index.html
@@ -39,7 +39,7 @@
         </span>          
       </div>        
     </nav>    
-    <header>
+    <header class="nav">
       <div>
           <img src="/images/profile-hex.png"> 
       </div>
@@ -61,6 +61,32 @@
             </div>
           </form>        
         </div>
+        <div class="tweet">
+          <article>
+            <header>
+              <div class="avatar-info">
+                <img src="https://i.imgur.com/73hZDYK.png" alt="avatar">
+                <span>Newton</span>
+              </div>
+              <div class="avatar-info-username">
+                <span>@SirIsaac</span>
+              </div>              
+            </header>
+            <div class="tweet-content">
+              <span>If I have seen further it is by...</span>
+            </div>            
+            <footer>
+              <div>
+                <span>10 days ago</span>
+              </div>
+              <div class="tweet-action-icon">
+                <i class="fa-solid fa-retweet"></i>
+                <i class="fa-solid fa-flag"></i>
+                <i class="fa-solid fa-heart"></i>
+              </div>
+            </footer>
+          </article>
+        </div>        
       </section>            
     </main>
   </body>
