Changed element reference in counter javascript.

--- a/public/index.html
+++ b/public/index.html
@@ -57,7 +57,7 @@
             <textarea type="text" rows="1" name="text" id="tweet-text" placeholder="..." data-maxlength="140"></textarea>
             <div class="tweet-text-info">
               <button id="tweet-send" type="submit">Tweet</button>
-              <output id="tweet-counter" name="counter" class="counter" for="tweet-text">140</output>
+              <output name="counter" class="counter" for="tweet-text">140</output>
             </div>
           </form>        
         </div>
