--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
 
     <!-- FontAwesome --->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    
+
     <!-- App CSS -->
     <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
     <link rel="stylesheet" href="/styles/nav.css" type="text/css" />
@@ -36,12 +36,12 @@
       <div class="new-tweet">
         <span><strong>Write</strong> a new tweet.
           <i class="fa-solid fa-angles-down"></i>
-        </span>          
-      </div>        
-    </nav>    
+        </span>
+      </div>
+    </nav>
     <header class="nav">
       <div>
-          <img src="/images/profile-hex.png"> 
+          <img src="/images/profile-hex.png">
       </div>
       <div>
           <h2>Your Name</h2>
@@ -59,35 +59,11 @@
               <button id="tweet-send" type="submit">Tweet</button>
               <output name="counter" class="counter" for="tweet-text">140</output>
             </div>
-          </form>        
+          </form>
         </div>
-        <div class="tweet">
-          <article>
-            <header>
-              <div class="avatar-info">
-                <img src="https://i.imgur.com/73hZDYK.png" alt="avatar">
-                <span>Newton</span>
-              </div>
-              <div class="avatar-info-username">
-                <span>@SirIsaac</span>
-              </div>              
-            </header>
-            <div class="tweet-content">
-              <span>If I have seen further it is by...</span>
-            </div>            
-            <footer>
-              <div>
-                <span>10 days ago</span>
-              </div>
-              <div class="tweet-action-icon">
-                <i class="fa-solid fa-retweet"></i>
-                <i class="fa-solid fa-flag"></i>
-                <i class="fa-solid fa-heart"></i>
-              </div>
-            </footer>
-          </article>
-        </div>        
-      </section>            
+        <div class="tweets">
+        </div>
+      </section>
     </main>
   </body>
 </html>
