Added Form slide toggle

--- a/public/index.html
+++ b/public/index.html
@@ -55,7 +55,7 @@
       <div class="error-message-validation hidden">
         <span class="error-text"></span>
       </div>
-      <section class="new-tweet">
+      <section class="new-tweet hidden">
         <!-- <h2>Compose Tweet</h2> -->
         <div class="form-wrapper">
           <form id="form-new-tweet" method="POST" action="/tweets">
@@ -67,9 +67,8 @@
             </div>
           </form>
         </div>
-        <div class="tweets">
-        </div>
       </section>
+      <div class="tweets"></div>
     </main>
   </body>
 </html>
