Added scroll to top button. Moved more functions over to helpers.js

--- a/public/index.html
+++ b/public/index.html
@@ -70,5 +70,6 @@
       </section>
       <div class="tweets"></div>
     </main>
+    <button id="scroll-to-top"><i class="fa-solid fa-angles-up"></i></button>
   </body>
 </html>
