--- a/public/index.html
+++ b/public/index.html
@@ -47,7 +47,7 @@
           <img src="/images/profile-hex.png">
       </div>
       <div>
-          <h2>Your Name</h2>
+          <h2>Paulo</h2>
       </div>
   </header>
     <!-- Page-specific (main) content here -->
